cabal-version: 3.0
name:          hbomb
version:       0.1.0.0
synopsis:      a repl for the bomb defusal manual in Haskell
license-file:  LICENSE
author:        'Lauren Arnett, Joseph Morag'
maintainer:    jm@josephmorag.com
category:      Games
build-type:    Simple

common shared
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  ghc-options:        -Wall -Wincomplete-uni-patterns
  default-language:   Haskell2010
  build-depends:
    , array
    , base           ^>=4.13
    , haskeline
    , mtl
    , prettyprinter
    , rio
    , split

executable hbomb
  import:         shared
  hs-source-dirs: src
  main-is:        Main.hs
  other-modules:
    Bomb
    Bomb.Modules.Button
    Bomb.Modules.Mazes
    Bomb.Modules.SimpleWires

  ghc-options:    -O -threaded
